Copied the original CSS code to "Container for spares" in order not to lose it. Tightened the new CSS code for the NAV bar and imported the code to "Style.css" => on my iphone the NAV bar works remarkably well. Issues still to resolve: a) fonts don't show (only Time New Roman), b) wrapper gap is large on iphone.

--- a/Style.css
+++ b/Style.css
@@ -23,57 +23,110 @@ header {
 	position: fixed;
 }
 
-@import "compass/css3";
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 
-.navigation {
-  list-style: none;
-  margin: 0; 
-  background: #E14F4F;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  
-  -webkit-flex-flow: row wrap;
-  justify-content: flex-end;
+nav ul {
+	list-style: none;
+	display: flex; 
+	flex-wrap: wrap; 
+	max-width: 1080px; 
+	margin: 0 auto;		
+	background:#E14F4F;
+	opacity: 0.85;
 }
 
-.navigation a {
-  text-decoration: none;
-  display: block;
-  padding: 0.4em;
-  color: white;
+li {
+	float:left;
+	border-right: 2px solid whitesmoke;
 }
 
-.navigation a:hover {
-  background: darken(#E14F4F, 2%);
+nav ul,
+nav li {
+	flex: 1;
+	font-family: "Paper Cuts";
+}
+nav li:last-child {
+	border-bottom: none;
+}
+nav a {
+	text-decoration: none;
+	color: inherit;
+	display: block;
+	font-size: 1.8rem;
+}
+nav a:hover {
+	background: #555;
+	color: whitesmoke;
+}
+nav li {
+	position: relative;
+	line-height: 50px;
+	color: whitesmoke;
+	text-align: center;
 }
 
-@media all and (max-width: 800px) {
-  .navigation {
-    justify-content: space-around;
-  }
+nav input,
+nav label {
+	display: none;
+	width: 36px; 
+	height: 36px; 
+	background: #555; 
+	color: whitesmoke; 
+	text-align: center; 
+	line-height: 36px;
+	font-size: 1.6rem;
+	border-radius: 2px;
+} 
+nav label {
+	position: absolute; 
+	top: 8px; 
+	right: 8px; 
+	transition: .4s;
+}
+nav label:hover {cursor:pointer;}
+nav label:before {
+	font-family: FontAwesome;
+	font-size: 24px;
+	content: "\f0c9";
+	text-align: center;
+}
+
+@media only screen and (max-width: 1080px){
+   nav {
+      position: relative;
+   }
+	nav ul {
+		transform: translateY(0);
+		box-shadow: 0 0 5px rgba(0,0,0, .7);
+    	transition: all .5s;
+    	position: absolute;
+    	width: 100%;
+	}
+	nav li {
+		flex: none; 
+		width: 100%;
+		border-bottom: solid 1px whitesmoke;
+	} 
+	nav input[type="checkbox"]:checked + ul  {
+		transform: translateY(-100%);
+		width: 100%;
+		background: #555;   
+    	transition: all .5s;
+	}
+	nav label{
+    	display: block;
+   }  
+	nav input[type="checkbox"]:checked + ul li:nth-child(1){
+		background: #555; 
+		color: whitesmoke;
+	}  
 }
 
 @media all and (max-width: 600px) {
-  .navigation {
-    -webkit-flex-flow: column wrap;
-    flex-flow: column wrap;
-    padding: 0;
-  }
-  
-  .navigation a { 
-    text-align: center; 
-    padding: 10px;
-    border-top: 1px solid rgba(255,255,255,0.3); 
-    border-bottom: 1px solid rgba(0,0,0,0.1); 
-  }
-
-  
-  .navigation li:last-of-type a {
-    border-bottom: none;
-  }
+.navigation {
+   -webkit-flex-flow: column wrap;
+   flex-flow: column wrap;
+   padding: 0;
 }
 
 ul {
@@ -84,24 +137,26 @@ ul {
 	padding: 0;
 	overflow: hidden;
 	background-color: #E14F4F;
+	}
+}
+	
+.wrapper2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+	background-color: hsl(0, 0%, 96%);
 }
 
-li {
-	float:left;
-	border-right: 2px solid whitesmoke;
-}
-
-li a {
-	display: block;
-	color: whitesmoke;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
-
-li a:hover {
-	background-color: #555;
-	color: whitesmoke;
+.wrap-item2 img {
+	width: 100%;
+	object-fit: contain;
+	border-radius: 4px;
+	align-self: center;
 }
 
 .wrapper {
@@ -144,30 +199,26 @@ li a:hover {
 	align-self: center;
 }
 
-@media all and (min-width: 800px) {
-	.wrapper3 {
-		display: -webkit-flex;
-		display: flex;
-		-webkit-justify-content: center;
-		width: 100%;
-		height:50%;
-		background-color: #FFFFFF;
-		flex-flow: row;
-		justify-content: space-around;
-		flex-wrap: wrap;
-		object-fit: contain;
-	}
+.wrapper3 {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	width: 100%;
+	height:50%;
+	background-color: #FFFFFF;
+	flex-flow: row;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	object-fit: contain;
 }
 
-@media all and (min-width: 600px) {
-		.wrap-item3 {
-		background-color: #FfFfFf;
-		justify-content: contain;
-		align-content: center;
-		height: 100%;
-		margin: 10px;
-		object-fit: contain;
-	}
+.wrap-item3 {
+	background-color: #FfFfFf;
+	justify-content: contain;
+	align-content: center;
+	height: 100%;
+	margin: 10px;
+	object-fit: contain;
 }
 
 .button {
