--- a/TEST_CSS.css
+++ b/TEST_CSS.css
@@ -2,9 +2,6 @@
 /* CSS Document */
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 
-
-/************** NAVIGATION ***************/
-
 nav ul {
 	list-style: none;
 	display: flex; 
@@ -71,8 +68,6 @@ nav label:before {
 	text-align: center;
 }
 
-/************* MEDIA QUERIES **************/
-
 @media only screen and (max-width: 1080px){
    nav {
       position: relative;
@@ -102,4 +97,39 @@ nav label:before {
 		background: #555; 
 		color: whitesmoke;
 	}  
+}
+
+.navigation {
+   -webkit-flex-flow: column wrap;
+   flex-flow: column wrap;
+   padding: 0;
+}
+
+ul {
+	font-family: "Paper Cuts";
+	font-size: 30px;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #E14F4F;
+}
+
+.wrapper2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+	background-color: hsl(0, 0%, 96%);
+}
+
+.wrap-item2 img {
+	width: 100%;
+	object-fit: contain;
+	border-radius: 4px;
+	align-self: center;
 }
